feat: Unify Category Management, Standardize Admin UI Layout, and POS UX Improvements